style: fix validation message alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,5 +11,6 @@
 
   .site-minder-text {
     width: 150px;
+    height: 20px;
   }
 }
